--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>Social Link</title>
 </head>
 <body>
-    
+    <div class="container">
+        <img src="assets/images/avatar-jessica.jpeg" alt="profile-pic">
+        <div class="name">
+            <h1>Jessica Randall</h1>
+            <p>London, United Kingdom</p>
+        </div>
+        <div class="links">
+            <span>"Front-end developer and avid reader."</span>
+            <a href="#" class="btn">GitHub</a>
+            <a href="#" class="btn">Frontend Mentor</a>
+            <a href="#" class="btn">LinkedIn</a>
+            <a href="#" class="btn">Twitter</a>
+            <a href="#" class="btn">Instagram</a>
+        </div>
+    </div>
 </body>
 </html>
